src/App.css
:root {
   --white: #ffffff;
   --dark-white: #e2e2e2;
   --light-grey: #aaaaaa;
   --dark-green: #054e23;
   --dark-blue: #00004b;
   --light-blue: #47479b;
}

* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
}

#root {
   width: 100%;
   height: auto;

   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: var(--dark-white);
}

ul {
   list-style-type: none;

   display: grid;
   gap: 2vw;
}

li {
   width: 100%;
}

.maker-header {
   display: flex;
   align-items: center;
   justify-content: start;

   width: 100%;
   padding: 1vw 1vw 1vw 0;

   background-color: var(--dark-green);
   color: var(--white);
   font-size: clamp(0.8rem, 3.5vw, 1.2rem);
}

.maker-header img {
   width: auto;
   height: 6vh;
   padding: 0;
}

.scroll-text {
   display: flex;
   gap: 2vw;
   align-items: center;
   justify-content: center;

   width: 100%;
   padding: 1vw;
   margin-top: 1vh;

   text-decoration: underline;
   font-weight: bold;
   font-size: 1.2rem;
}

.scroll-text img {
   width: 3vw;
   height: auto;
}

.cv-info {
   width: 95%;
   height: auto;

   margin-top: 5vh;
   padding: 3vw;
   border-radius: 2vw;
   background-color: var(--white);
}

.input-section {
   margin-bottom: 5vh;
}

.input-section-header {
   display: flex;
   justify-content: space-between;
   align-items: center;

   margin-bottom: 2vh;
}

.input-section-header h2 {
   text-decoration: underline;
}

.input-header-buttons {
   display: flex;
   gap: 2vw;
}

.input-header-buttons button {
   padding: 2vw 3vw;
   border-radius: 2vw;
   font-size: clamp(0.9rem, 3vw, 1.2rem);
}

.input-field {
   display: flex;
   flex-direction: column;

   margin: 0 0 1vh 0;
}

.input-field input {
   width: 100%;
   height: 4vh;
   padding: 1vw;

   font-size: clamp(1rem, 3vw, 1.4rem);
}

.input-field label {
   font-size: clamp(1.1rem, 4vw, 1.6rem);
   font-weight: bold;
   margin-bottom: 0.3vh;
}

.row {
   display: flex;
   padding: 1vw;
   gap: 2vw;
   width: 100%;
   text-align: left;
}

.live-preview {
   height: 90vh;
   width: 95%;

   margin: 5vh 0;
   background-color: var(--white);

   display: grid;
   grid-template-rows: 1fr 3fr 3fr;
}

.preview-section ul {
   height: 100%;
   width: 100%;

   display: grid;
   align-items: center;
   justify-content: center;
   text-align: center;
}

.preview-section h2 {
   margin-top: 2vh;
   padding: 0 1vw;
   color: var(--dark-blue);
   font-weight: bold;
   text-decoration: underline;
   text-decoration-color: var(--light-blue);
}
.personal-input-preview {
   grid-template-columns: 1fr;
   grid-template-rows: 1.5fr 1fr 1fr;

   background-color: var(--dark-blue);

   font-size: clamp(1rem, 4vw, 1.3rem);
   font-weight: bold;
   color: var(--white);
}

.personal-input-preview img {
   height: auto;
   width: 4vw;
}

.preview-name {
   font-size: clamp(1.5rem, 5vw, 1.8rem);
   text-align: center;
}

.preview-availability li,
.preview-email li {
   display: flex;
   gap: 1vw;
   align-items: center;
   justify-content: center;
}

.educational-input-preview {
   grid-template-rows: 1fr;
   grid-template-columns: auto 1fr;

   max-height: 20%;
   margin: 2vw 0;
   gap: 1vw;

   font-size: clamp(1rem, 4vw, 1.3rem);
   border-bottom: 0.5vh solid var(--light-grey);
}

.preview-education-date {
   grid-row: 1 / 2;
   align-self: flex-start;
}

.preview-education-date li + li,
.preview-experience-date li + li {
   display: flex;
   gap: 2vw;
}

.preview-education-date li + li::before,
.preview-experience-date li + li::before {
   content: "-";
}

.preview-school-info {
   flex-direction: column;
   align-self: flex-start;
}

.preview-school-info li:nth-child(1),
.preview-company-position li:nth-child(1) {
   font-size: clamp(1.2rem, 5vw, 1.5rem);
   color: var(--light-blue);
   font-weight: bold;
}

.experience-input-preview {
   grid-template-rows: auto repeat(1, 1fr);
   grid-template-columns: auto 1fr;

   max-height: 25%;
   margin: 2vw 0;
   gap: 1vw;

   font-size: clamp(1rem, 4vw, 1.3rem);
   border-bottom: 0.5vh solid var(--light-grey);
}

.preview-experience-date {
   display: flex;
   align-self: flex-start;
}

.preview-company-position {
   grid-area: 1 / 2 / 2 / -1;
   display: flex;
   flex-direction: column;
   align-self: flex-start;
   gap: 0;
}

.preview-company-position li + li {
   font-size: clamp(1.1rem, 4vw, 1.4vw);
}

.preview-responsibilities {
   grid-area: 2 / 2 / -1 / -1;
}

